# openzk

./: .gitignore  404.html  CHANGELOG.md  DISCLAIMER.md  LICENSE  README.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
ARCHITECTURE/: index.html
contributing/: index.html
disclaimer/: index.html
docs/: ARCHITECTURE.md  contributing.md  disclaimer.md  index.md
docs/guide/: getting-started.md  recipes.md
docs/reference/: api.md  protocol.md
guide/getting-started/: index.html
guide/recipes/: index.html
reference/api/: index.html
reference/protocol/: index.html
search/: search_index.json
src/openzk/: __init__.py  client.py  codecs.py  errors.py  framing.py  models.py  opcodes.py  session.py  transport.py
tests/: fakes.py  test_client.py  test_codecs.py  test_errors.py  test_framing.py  test_integration.py  test_models.py  test_opcodes.py  test_session.py  test_smoke.py  test_transport.py
tools/: extract_opcodes.py
